# AgentBay

./: README.md  Readme.md  index.html
backend/: .gitignore  commands.txt  products.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ac5c502beaf_remove_bid_id_column_from_bids_table.py  44df0db80805_add_image_url_column_to_products_table.py  82ae1aad63ba_initial_migration_create_products_and_.py  9caf81255a9e_add_current_bid_column_to_products_table.py
backend/app/: database.py
backend/app/agents/backend/data/: products.json
backend/app/agents/listing_agent/: agent.py
backend/app/agents/recommendation_agent/: agent.py
backend/app/agents/voice_agent/: agent.py
backend/app/api/: api.py  listing_api.py
backend/app/enums/: enums.py
backend/app/models/: agent_models.py  db_models.py  request_models.py
backend/app/models/converters/: converters.py
backend/app/services/: bid_service.py  product_service.py
backend/backend/data/: products.json
frontend/: components.json  index.html  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: RecommendationCards.tsx
frontend/src/pages/: Architecture.tsx  Chat.tsx  Index.tsx  Products.tsx  Signin.tsx  Signup.tsx
frontend/src/styles/: theme.css
src/: App.tsx  index.css
src/components/landing/: FeaturedProducts.tsx  Footer.tsx  HeroSection.tsx  (+1 more)
src/contexts/: ThemeContext.tsx
src/data/: products.js
src/pages/: Chat.tsx  Index.tsx
(+10 files in other folders)
