[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "google-adk>=1.6.1",
    "google-genai>=1.25.0",
    "google-generativeai>=0.8.5",
    "pillow>=11.3.0",
    "pyaudio>=0.2.14",
    "speechrecognition>=3.14.3",
    "uvicorn>=0.35.0",
]
